--- a/network/docker-compose.yml
+++ b/network/docker-compose.yml
@@ -1,13 +1,13 @@
-version: '3.8'
-
 networks:
   fabric-ca:
+    name: fabric-ca
   fabric-network:
+    name: fabric-network
 
 services:
   # Certificate Authority
   ca.org1.example.com:
-    image: hyperledger/fabric-ca:1.4
+    image: hyperledger/fabric-ca:1.5
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org1
@@ -26,7 +26,7 @@ services:
   # Orderer
   orderer.example.com:
     container_name: orderer.example.com
-    image: hyperledger/fabric-orderer:1.4
+    image: hyperledger/fabric-orderer:2.4
     environment:
       - FABRIC_LOGGING_SPEC=INFO
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
@@ -56,8 +56,10 @@ services:
   # Peer0 Org1
   peer0.org1.example.com:
     container_name: peer0.org1.example.com
-    image: hyperledger/fabric-peer:1.4
+    image: hyperledger/fabric-peer:2.4
+    privileged: true
     environment:
+      - DOCKER_BUILDKIT=0
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric-network
       - FABRIC_LOGGING_SPEC=INFO
@@ -76,6 +78,7 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_CHAINCODE_BUILDER=hyperledger/fabric-ccenv:2.2
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp:/etc/hyperledger/fabric/msp
@@ -93,7 +96,7 @@ services:
   # CLI
   cli:
     container_name: cli
-    image: hyperledger/fabric-tools:1.4.8
+    image: hyperledger/fabric-tools:2.4
     tty: true
     stdin_open: true
     environment:
@@ -112,7 +115,7 @@ services:
     command: /bin/bash
     volumes:
       - /var/run/:/host/var/run/
-      - D:/Learning/QuanLyHopDongCong/chaincode:/opt/gopath/src/github.com/hyperledger/fabric/chaincode
+      - ./../chaincode:/opt/gopath/src/github.com/chaincode
       - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto-config/
       - ./configtx.yaml:/opt/gopath/src/github.com/hyperledger/fabric/peer/configtx.yaml
       - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
