--- a/backend/config.env.example
+++ b/backend/config.env.example
@@ -27,3 +27,10 @@ DB_PASSWORD=password
 # File Upload
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=./uploads
+
+# Ethereum Blockchain Configuration
+BLOCKCHAIN_ENABLED=true
+BLOCKCHAIN_NETWORK=sepolia
+BLOCKCHAIN_RPC_URL=https://sepolia.infura.io/v3/YOUR_INFURA_PROJECT_ID
+BLOCKCHAIN_CONTRACT_ADDRESS=
+BLOCKCHAIN_PRIVATE_KEY=your_private_key_here
