--- a/backend/package.json
+++ b/backend/package.json
@@ -10,27 +10,33 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
-    "joi": "^17.11.0",
-    "mongoose": "^8.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.10.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "fabric-ca-client": "^2.2.19",
     "fabric-network": "^2.2.19",
-    "winston": "^3.11.0",
-    "express-rate-limit": "^7.1.5",
-    "multer": "^1.4.5-lts.1"
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
-  "keywords": ["hyperledger", "blockchain", "contract", "management"],
+  "keywords": [
+    "hyperledger",
+    "blockchain",
+    "contract",
+    "management"
+  ],
   "author": "Your Name",
   "license": "MIT"
 }
