--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,18 @@
     "@mui/x-data-grid": "^6.18.2",
     "@mui/x-date-pickers": "^6.18.2",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "ethers": "^6.10.0",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.4.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.8.0",
-    "dayjs": "^1.11.10",
-    "formik": "^2.4.5",
-    "yup": "^1.3.3",
-    "react-query": "^3.39.3",
-    "react-hot-toast": "^2.4.1",
-    "react-helmet-async": "^1.3.0"
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
