--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,14 @@
     "dayjs": "^1.11.10",
     "ethers": "^6.10.0",
     "formik": "^2.4.5",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
